Fix overflowing of the content in the contact section on very narrow screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,9 @@ VARIABLES
   --font-size-extra-small: 0.75rem;
   --font-size-small: 0.9rem;
   --font-size-standard: 1rem;
-  --font-size-large: 1.4rem;
-  --font-size-extra-large: 1.5rem;
+  --font-size-large: 1.2rem;
+  --font-size-extra-large: 1.4rem;
+  --font-size-jumbo: 1.6rem;
 
   /* LINE HEIGHTS */
   --line-height-basic: 1rem;
@@ -121,6 +122,7 @@ nav {
   width: 100%;
   height: 100%;
   transition: background 300ms;
+  font-size: var(--font-size-standard);
 }
 
 .menu-item a:hover {
@@ -146,7 +148,7 @@ ABOUT ME
 }
 
 #profile p {
-  font-size: var(--font-size-extra-large);
+  font-size: var(--font-size-jumbo);
   color: var(--dark-blue);
 }
 
@@ -259,7 +261,7 @@ CONTACT
 *************/
 
 .contact-section {
-  height: calc(50vh - 4rem);
+  min-height: calc(50vh - 4rem);
   background: var(--beige);
 }
 
@@ -274,7 +276,7 @@ CONTACT
 }
 
 #contact p {
-  font-size: var(--font-size-extra-large);
+  font-size: var(--font-size-jumbo);
 }
 
 .contact-options {
@@ -299,13 +301,17 @@ CONTACT
 }
 
 .contact-options li span {
-  font-size: var(--margin-double);
+  font-size: var(--font-size-jumbo);
 }
 
 .contact-text {
   margin-left: var(--margin-standard);
   font-weight: normal;
   font-family: var(--font-family-default);
+}
+
+span {
+  font-size: var(--font-size-small);
 }
 
 /************
